--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.projetoappdoacao">
 
     <application
         android:allowBackup="true"
@@ -12,15 +13,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjetoAppDoacao"
         tools:targetApi="31">
+
+        <!-- Tela inicial -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Cadastro -->
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".LoginActivity" />
+
+        <!-- Dashboards -->
+        <activity android:name=".OngDashboard" />
+        <activity android:name=".DoadorDashboard" />
+
+        <!-- Funcionalidades principais -->
+        <activity android:name=".Familias" />
+        <activity android:name=".CadFamilia" />
+        <activity android:name=".Estoque" />
+        <activity android:name=".OngDoacao" />
+
     </application>
 
 </manifest>
